# rust-framework-bench

./: Cargo.toml  Rocket.toml  conc-10.md  conc-100.md  conc-1000.md  config.json  readme.dev.md  readme.md  readme.test.md  results-10.md  results-100.md  results-50.md  results-500.md  results-750.md  start-test.sh
perf/: actix.txt  axum.txt  hyper.txt  ntex.txt  rocket.txt  tide.txt  warp.txt
perf/actix/: 10.txt  100.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  500.txt  512.txt  64.txt  700.txt  750.txt  8.txt
perf/astra/: 10.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  512.txt  64.txt  700.txt  8.txt
perf/axum/: 10.txt  100.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  500.txt  512.txt  64.txt  700.txt  750.txt  8.txt
perf/gotham/: 10.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  512.txt  64.txt  700.txt  8.txt
perf/hyper/: 10.txt  100.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  500.txt  512.txt  64.txt  700.txt  750.txt  8.txt
perf/may-minihttp/: 10.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  512.txt  64.txt  700.txt  8.txt
perf/nickel/: 10.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  512.txt  64.txt  700.txt  8.txt
perf/ntex/: 10.txt  100.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  500.txt  512.txt  64.txt  700.txt  750.txt  8.txt
perf/poem/: 10.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  512.txt  64.txt  700.txt  8.txt
perf/roa/: 10.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  512.txt  64.txt  700.txt  8.txt
perf/rocket/: 10.txt  100.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  500.txt  512.txt  64.txt  700.txt  750.txt  8.txt
perf/salvo/: 10.txt  100.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  500.txt  512.txt  64.txt  700.txt  8.txt
perf/thruster/: 10.txt  100.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  500.txt  512.txt  64.txt  700.txt  8.txt
perf/tide/: 10.txt  100.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  500.txt  512.txt  64.txt  700.txt  750.txt  8.txt
perf/tokio-minihttp/: 10.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  512.txt  64.txt  700.txt  8.txt
perf/viz/: 10.txt  100.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  500.txt  512.txt  64.txt  700.txt  750.txt  8.txt
perf/warp/: 10.txt  100.txt  1024.txt  128.txt  16.txt  2048.txt  250.txt  256.txt  32.txt  50.txt  500.txt  512.txt  64.txt  700.txt  750.txt  8.txt
results/: concurrency-10.md  concurrency-100.md  concurrency-1024.md  concurrency-128.md  concurrency-16.md  concurrency-2048.md  concurrency-250.md  concurrency-256.md  concurrency-32.md  concurrency-50.md  concurrency-500.md  concurrency-512.md  concurrency-64.md  concurrency-700.md  concurrency-8.md
src/: main.rs
src/helpers/: mod.rs
src/utils/: config.dev.json  config.json  example-output.json  header.txt  markdown-header.md  markdown-header.txt  readme_block.md  readme_block.txt  table-separator.md
