[package]
name = "rust-framework-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Ishtmeet Singh <ishtmeet@rigelnext.com>"]
repository = "https://github.com/ishtmeet-singh/rust-framework-benchmarks"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "actix"
path = "src/bin/actix.rs"

[[bin]]
name = "axum"
path = "src/bin/axum.rs"

[[bin]]
name = "hyper"
path = "src/bin/hyper.rs"

[[bin]]
name = "ntex"
path = "src/bin/ntex.rs"

[[bin]]
name = "tide"
path = "src/bin/tide.rs"

[[bin]]
name = "warp"
path = "src/bin/warp.rs"

[[bin]]
name = "rocket"
path = "src/bin/rocket.rs"

[[bin]]
name = "viz"
path = "src/bin/viz.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
axum = "0.5.13"
hyper = "0.14.20"
ntex = { version = "0.5", features = ["tokio"] }
actix-web = "4"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
rocket = "0.5.0-rc.2"
viz = "0.2"
serde_json = "1.0"
serde = "1.0.140"
regex = "1.6.0"
lazy_static = "1.4.0"
num-format = "0.4.0"
astra = "0.1.2"
indicatif = "0.16.2"
colored = "2.0.0"
poem = "1.3.35"
salvo = "0.27.0"
thruster = "1.2.2"
may_minihttp = { git = "https://github.com/Xudong-Huang/may_minihttp.git" }
gotham = "0.7.1"
nickel = "0.10.0"
nickel_macros = "0.1.0"
roa = "0.6"
anyhow = "1.0.58"
futures = "0.1.9"
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
tokio-proto = "0.1"
tokio-service = "0.1"
crossterm = "0.24.0"
chrono = "0.4.19"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
